force-app/main/default/objects/Order_Customisations__c/Order_Customisations__c.object-meta.xml
<CustomObject>
    <description>Order Customisation 
This is a combination of additional accommodations, flight Customisations and Cruise Customisation</description>
    <label>Order Customisation (Old)</label>
    <nameField>
        <displayFormat>Customisatio-{0000}</displayFormat>
        <label>Order Customisations  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Customisations (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>