force-app/main/default/objects/Order_Customisations__c/fields/Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Amount_Outstanding__c</fullName>
    <description>This is Amount Outstanding on order</description>
    <formula>order__r.amount_outstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding on Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>