force-app/main/default/objects/Order_Customisations__c/fields/Customisation_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customisation_Email_Address__c</fullName>
    <label>Customisation Email Address</label>
    <type>Email</type>
</CustomField>