force-app/main/default/objects/Order_Customisations__c/fields/Customisation_type__c.field-meta.xml
<CustomField>
    <fullName>Customisation_type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customisation type</label>
    <type>Text</type>
</CustomField>