force-app/main/default/objects/Order_Customisations__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <defaultValue>&quot;Please enter breakdown of costs here&quot;</defaultValue>
    <inlineHelpText>Please enter the breakdown of costs</inlineHelpText>
    <label>Quoted Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>