force-app/main/default/objects/Order_Customisations__c/fields/Flight_Ticketer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Flight_Ticketer_Email_Address__c</fullName>
    <label>Flight Ticketer Email Address</label>
    <type>Email</type>
</CustomField>