force-app/main/default/objects/Order_Customisations__c/fields/Order_Number_for_Joining_Combining__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_for_Joining_Combining__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What order is this current order joining/combining with?</inlineHelpText>
    <label>Order Number for Joining/Combining</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Order Customisations (Order Number for Joining/Combining)</relationshipLabel>
    <relationshipName>Order_Customisations1</relationshipName>
    <type>Lookup</type>
</CustomField>