force-app/main/default/objects/Order_Customisations__c/fields/Requested_Details__c.field-meta.xml
<CustomField>
    <fullName>Requested_Details__c</fullName>
    <label>Requested Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>