force-app/main/default/objects/Order_Customisations__c/fields/Total_Final_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Final_Cost__c</fullName>
    <formula>Total_Cost__c +  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Final Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>