force-app/main/default/objects/Order_Customisations__c/fields/User_Quote_Received__c.field-meta.xml
<CustomField>
    <fullName>User_Quote_Received__c</fullName>
    <description>This field (populated by Workflow) is the logged in user who set Status to &quot;Quote Received&quot;</description>
    <label>User - Quote Received</label>
    <length>250</length>
    <type>Text</type>
</CustomField>