force-app/main/default/objects/Order_Customisations__c/recordTypes/Cruise_Customisation.recordType-meta.xml
<RecordType>
    <fullName>Cruise_Customisation</fullName>
    <active>true</active>
    <label>Cruise Customisation</label>
</RecordType>