force-app/main/default/objects/Order_Customisations__c/recordTypes/Land_Customisation.recordType-meta.xml
<RecordType>
    <fullName>Land_Customisation</fullName>
    <active>true</active>
    <label>Land Customisation</label>
</RecordType>