force-app/main/default/objects/Order_Customisations__c/recordTypes/Stop_Over_Customisation.recordType-meta.xml
<RecordType>
    <fullName>Stop_Over_Customisation</fullName>
    <active>true</active>
    <label>Stop Over Customisation</label>
</RecordType>