force-app/main/default/objects/Order_Customisations__c/recordTypes/Transfer_Customisation.recordType-meta.xml
<RecordType>
    <fullName>Transfer_Customisation</fullName>
    <active>true</active>
    <label>Transfer Customisation</label>
</RecordType>